omni/tests/goldens/types/unknown_type_16.omni
let value16:Mystery16 = 1
